tests/parsing/line-break-after-colon.stderr
error[E010]: found line break, but expected expression
 >>> ${DIRECTORY}/parsing/line-break-after-colon.lushui:4:12
  |
4 | Definition:
  |            ^ unexpected token
  |

error: aborting due to previous error

