tests/parsing/line-break-after-colon.lushui
;; TEST fail check
;; this should be supported eventually #ImprovedIndentationSystem

Definition:
    Type =
    Type

